fix sort container z-index

--- a/styles/works-list.css
+++ b/styles/works-list.css
@@ -49,6 +49,7 @@
    transform-origin: top;
    transition: .3s;
    border-radius: 5px;
+   z-index: 9999;
 }
 
 #sort-container.visible {
